@@ -1,5 +1,11 @@
 2007-01-12  Julian Brown  <julian@codesourcery.com>
 
+	* config/m68k/m68k.h (TARGET_ISAB): New macro.
+	* config/m68k/m68k.c: Use TARGET_ISAB rather than TARGET_CFV4.
+	* config/m68k/m68k.md: Likewise.
+
+2007-01-12  Julian Brown  <julian@codesourcery.com>
+
 	* config/m68k/m68k.h (LEGITIMATE_INDEX_P, LEGITIMIZE_ADDRESS): Use
 	TARGET_COLDFIRE_FPU instead of TARGET_CFV4E.
 
